@@ -1,4 +1,5 @@
 <resources>
+    <string name="empty" />
     <string name="monday">Day of the Moon</string>
     <string name="tuesday">Tyr's Day</string>
     <string name="wednesday">Wodan's Day</string>
