@@ -3,7 +3,6 @@ import androidx.compose.foundation.layout.fillMaxSize
 import androidx.compose.material.Surface
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.Modifier
-import moe.tlaster.precompose.PreComposeApp
 import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.ui.tooling.preview.Preview
 import presentation.style.MainTheme
@@ -13,8 +12,7 @@ import presentation.style.setIfDarkMode
 @Composable
 @Preview
 fun App() {
-    PreComposeApp {
-        MainTheme {
+    MainTheme {
 //            var showContent by remember { mutableStateOf(false) }
 //            val greeting = remember { Greeting().greet() }
 //            Column(Modifier.fillMaxWidth(), horizontalAlignment = Alignment.CenterHorizontally) {
@@ -32,9 +30,8 @@ fun App() {
 //                    }
 //                }
 //            }
-            Surface(modifier = Modifier.fillMaxSize().setIfDarkMode()) {
-                Navigation()
-            }
+        Surface(modifier = Modifier.fillMaxSize().setIfDarkMode()) {
+            InitNavStack()
         }
     }
 }
