@@ -1,36 +1,66 @@
 
 import androidx.compose.runtime.Composable
+import androidx.lifecycle.viewmodel.compose.viewModel
+import androidx.navigation.NavHostController
+import androidx.navigation.compose.NavHost
+import androidx.navigation.compose.composable
 import androidx.navigation.compose.rememberNavController
-import moe.tlaster.precompose.koin.koinViewModel
-import moe.tlaster.precompose.navigation.NavHost
-import moe.tlaster.precompose.navigation.rememberNavigator
-import moe.tlaster.precompose.navigation.transition.NavTransition
+import data.calendar.CalendarRepository
+import org.jetbrains.compose.resources.ExperimentalResourceApi
+import org.jetbrains.compose.resources.StringResource
 import presentation.screens.dayPartMenu.DayPartMenuScreen
 import presentation.screens.dayPartMenu.DayPartMenuViewModel
 import presentation.screens.mainMenu.MainMenuScreen
 import presentation.screens.mainMenu.MainMenuViewModel
+import zealotry.composeapp.generated.resources.Res
+import zealotry.composeapp.generated.resources.day
+import zealotry.composeapp.generated.resources.empty
+import zealotry.composeapp.generated.resources.evening
+import zealotry.composeapp.generated.resources.morning
 
-@Composable
-fun NavigationNew() {
-    val navController = rememberNavController()
+// Screens
+@OptIn(ExperimentalResourceApi::class)
+enum class Screen(val title: StringResource) {
+    MainMenu(title = Res.string.empty),
+    Morning(title = Res.string.morning),
+    Day(title = Res.string.day),
+    Evening(title = Res.string.evening),
 }
 
 @Composable
-fun Navigation() {
-    val navigator = rememberNavigator()
-    NavHost(
-        navigator = navigator,
-        navTransition = NavTransition(),
-        initialRoute = "/mainMenu",
-    ) {
-        scene(route = "/mainMenu", navTransition = NavTransition()) {
-            val mainVM = koinViewModel(MainMenuViewModel::class)
-            MainMenuScreen(mainVM) { navigator.navigate("/dayPartMenu/$it") }
-        }
+fun InitNavStack() {
+    val navController: NavHostController = rememberNavController()
 
-        scene(route = "/dayPartMenu/{part}", navTransition = NavTransition()) {
-            val vm = koinViewModel(DayPartMenuViewModel::class)
-            DayPartMenuScreen(vm)
+    // ViewModels
+    val mainVM = viewModel { MainMenuViewModel(CalendarRepository()) }
+    val dayPartVM = viewModel { DayPartMenuViewModel() }
+
+    NavHost(navController, startDestination = Screen.MainMenu.name) {
+        composable(route = Screen.MainMenu.name) {
+            MainMenuScreen(viewModel = mainVM) { navController.navigate(it) }
         }
+        composable(route = Screen.Morning.name) { DayPartMenuScreen(dayPartVM) }
+        composable(route = Screen.Day.name) { DayPartMenuScreen(dayPartVM) }
+        composable(route = Screen.Evening.name) { DayPartMenuScreen(dayPartVM) }
     }
 }
+
+// @Composable
+// fun Navigation() {
+//    val navigator = rememberNavigator()
+//    NavHost(
+//        navigator = navigator,
+//        navTransition = NavTransition(),
+//        initialRoute = "/mainMenu",
+//    ) {
+//        scene(route = "/mainMenu", navTransition = NavTransition()) {
+//            val mainVM = koinViewModel(MainMenuViewModel::class)
+//            MainMenuScreen(mainVM) { navigator.navigate("/dayPartMenu/$it") }
+//        }
+//
+//        scene(route = "/dayPartMenu/{part}", navTransition = NavTransition()) {
+//            val vm = koinViewModel(DayPartMenuViewModel::class)
+//            DayPartMenuScreen(vm)
+//        }
+//    }
+// }
