@@ -1,12 +1,12 @@
 package presentation.calendar
 
+import androidx.lifecycle.ViewModel
+import androidx.lifecycle.viewModelScope
 import data.calendar.CalendarRepository
 import data.calendar.CalendarState
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
 import kotlinx.coroutines.launch
-import moe.tlaster.precompose.viewmodel.ViewModel
-import moe.tlaster.precompose.viewmodel.viewModelScope
 
 class CalendarViewModel(private val calendarRepository: CalendarRepository) : ViewModel() {
     private val _calendarState = MutableStateFlow(CalendarState())
