@@ -1,9 +1,9 @@
 package presentation.screens.dayPartMenu
 
+import androidx.lifecycle.ViewModel
 import data.screens.dayPartMenu.DayPartMenuUIState
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
-import moe.tlaster.precompose.viewmodel.ViewModel
 
 class DayPartMenuViewModel : ViewModel() {
     private val _uiState = MutableStateFlow(DayPartMenuUIState())
