@@ -1,5 +1,7 @@
 package presentation.screens.mainMenu
 
+import androidx.lifecycle.ViewModel
+import androidx.lifecycle.viewModelScope
 import data.calendar.CalendarRepository
 import data.calendar.CalendarState
 import data.calendar.getFestiveDay
@@ -7,8 +9,6 @@ import data.screens.mainMenu.MainMenuUIState
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
 import kotlinx.coroutines.launch
-import moe.tlaster.precompose.viewmodel.ViewModel
-import moe.tlaster.precompose.viewmodel.viewModelScope
 
 class MainMenuViewModel(private val calendarRepository: CalendarRepository) : ViewModel() {
     private val _uiState = MutableStateFlow(MainMenuUIState())
