@@ -1,9 +1,9 @@
 package presentation.templateComponent
 
+import androidx.lifecycle.ViewModel
 import data.templateComponent.TemplateComponentUIState
 import kotlinx.coroutines.flow.MutableStateFlow
 import kotlinx.coroutines.flow.asStateFlow
-import moe.tlaster.precompose.viewmodel.ViewModel
 
 class TemplateComponentViewModel : ViewModel() {
     private val _uiState = MutableStateFlow(TemplateComponentUIState())
