@@ -2,6 +2,12 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+16-10-2024
+Streak: 1
+Learned:
+Did:
+    - Removed moe.tlaster PreCompose from the app, replaced by alpha version of androidx navigation-compose
+
 12-10-2024
 Streak: 1
 Learned:
